# STORM_EDEN

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  build_fast.bat  resolve.cpp  resolve.py  resolve_crash.cpp  sign_binaries.ps1  storm_boot_trace.txt
CMakeModules/: FindLLVM.cmake  GenerateSCMRev.cmake
src/: CMakeLists.txt
src/android/: gradle.properties  local.properties
src/android/app/: build.gradle.kts
src/audio_core/sink/: cubeb_sink.cpp  sdl3_sink.cpp  sink_details.cpp
src/common/: assert.h  input.h  logging.cpp  logging.h  scm_rev.cpp.in  settings.cpp  settings.h  settings_enums.h  thread_worker.h  threadsafe_queue.h  uint128.h  zstd_compression.cpp
src/common/fs/: path_util.cpp
src/common/x64/: cpu_detect.cpp
src/core/: CMakeLists.txt  core.cpp  core.h  core_timing.cpp  cpu_manager.cpp  device_memory_manager.inc  memory.cpp  reporter.cpp
src/core/arm/: arm_interface.cpp
src/core/crypto/: aes_util.cpp
src/core/file_sys/: card_image.cpp  content_archive.cpp  content_archive.h  ncz_virtual_file.cpp  ncz_virtual_file.h  partition_filesystem.cpp  patch_manager.cpp  patch_manager.h  registered_cache.cpp  romfs_factory.cpp  romfs_factory.h  submission_package.cpp
src/core/internal_network/: network.cpp
src/core/loader/: deconstructed_rom_directory.cpp  deconstructed_rom_directory.h  loader.cpp  loader.h  nca.cpp  nca.h  nso.cpp  nsp.cpp  nsp.h  xci.cpp  xci.h
src/dedicated_room/: CMakeLists.txt  eden_room.cpp  eden_room.rc
src/eden/: CMakeLists.txt  about_dialog.cpp  aboutdialog.ui  bootmanager.cpp  breakpad.cpp  compatdb.cpp  compatibility_list.cpp  deps_dialog.cpp  deps_dialog.ui  dump_settings.h  eden.qrc  eden.rc  hotkeys.cpp  install_dialog.cpp  libqt_common.cpp  loading_screen.cpp  loading_screen.h  loading_screen.ui  main.cpp  main.ui  main_window.cpp  main_window.h  migration_worker.cpp  set_play_time_dialog.cpp  startup_checks.cpp  user_data_migration.cpp  user_data_migration.h  vk_device_info.cpp  vk_device_info.h
src/eden/applets/: qt_amiibo_settings.cpp  qt_controller.cpp  qt_error.cpp  qt_profile_select.cpp  qt_software_keyboard.cpp  qt_web_browser.cpp
src/eden/configuration/: configuration_shared.cpp  configure_applets.cpp  configure_applets.h  configure_audio.cpp  configure_audio.h  configure_auto_optimizer.cpp  configure_auto_optimizer.h  configure_auto_optimizer.ui  configure_camera.cpp  configure_cpu.cpp  configure_cpu.h  configure_cpu_debug.cpp  configure_debug.cpp  configure_debug_controller.cpp  configure_debug_tab.cpp  configure_dialog.cpp  configure_dialog.h  configure_filesystem.cpp  configure_gamebanana.cpp  configure_gamebanana.h  configure_general.cpp  configure_general.h  configure_graphics.cpp  configure_graphics.h  configure_graphics_advanced.cpp  configure_graphics_advanced.h  configure_graphics_extensions.cpp  configure_graphics_extensions.h  configure_hotkeys.cpp  configure_input.cpp  configure_input_advanced.cpp  configure_input_advanced.ui  configure_input_per_game.cpp  configure_input_per_game.h  configure_input_player.cpp  configure_input_player.ui  configure_input_player_widget.cpp  configure_input_profile_dialog.cpp  configure_motion_touch.cpp  configure_mouse_panning.cpp  (+20 more)
src/eden/debugger/: console.cpp  controller.cpp
src/eden/game/: game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h
src/eden/multiplayer/: chat_room.cpp  client_room.cpp  client_room.h  direct_connect.cpp  direct_connect.h  host_room.cpp  host_room.h  lobby.cpp  lobby.h  lobby.ui  message.cpp  moderation_dialog.cpp  state.cpp
src/eden/render/: performance_overlay.cpp
src/eden/util/: clickable_label.cpp  controller_navigation.cpp  hardware_analyzer.cpp  hardware_analyzer.h  limitable_input_dialog.cpp  overlay_dialog.cpp  url_request_interceptor.cpp  util.cpp
src/eden_cmd/: CMakeLists.txt  eden.cpp  eden.rc  sdl_config.cpp
src/eden_cmd/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_null.cpp  emu_window_sdl2_null.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h  emu_window_sdl3.cpp  emu_window_sdl3_gl.cpp  emu_window_sdl3_gl.h  emu_window_sdl3_null.cpp  emu_window_sdl3_null.h  emu_window_sdl3_vk.cpp  emu_window_sdl3_vk.h
src/eden_room_standalone/: CMakeLists.txt  eden_room_standalone.cpp
src/frontend_common/: config.cpp
src/input_common/: main.cpp
src/input_common/drivers/: sdl_driver.cpp  sdl_driver.h  virtual_amiibo.cpp
src/qt_common/: qt_string_lookup.h
src/qt_common/config/: qt_config.cpp  shared_translation.cpp  uisettings.cpp  uisettings.h
src/qt_common/util/: content.cpp  game.cpp
src/shader_recompiler/ir_opt/: global_memory_to_storage_buffer_pass.cpp
src/tests/video_core/: memory_tracker.cpp
src/video_core/: dma_pusher.cpp  dma_pusher.h  fence_manager.h  gpu.cpp  gpu_thread.cpp  gpu_thread.h  shader_environment.cpp  surface.cpp
src/video_core/control/: scheduler.h
(+291 files in other folders)
